--- a/app/src/main/res/layout/item_event_detail_thumbnail.xml
+++ b/app/src/main/res/layout/item_event_detail_thumbnail.xml
@@ -2,8 +2,8 @@
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/img_event_detail_thumbnail"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:background="@drawable/rv_item_detail_background"
     android:layout_gravity="center_vertical"
