--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -149,6 +149,16 @@
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.8" />
 
+            <Button
+                android:id="@+id/btn_backpack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guide_pole_left_start"
+                app:layout_constraintStart_toStartOf="@+id/guide_pole_right_start"
+                app:layout_constraintTop_toTopOf="@+id/guide_avatar_top" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
