--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorTransparent">#B3FFFFFF</color>
 
+    <color name="background_bagpack">#CDF9EC</color>
+
     <color name="park_sky">#C1FCEE</color>
     <color name="park_gras">#16F48A</color>
     <color name="background_city">#009688</color>
