--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
         <item name="android:textSize">15sp</item>
     </style>
 
-    <style name="login_textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <style name="faith_textInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="boxCornerRadiusTopEnd">30dp</item>
@@ -57,10 +57,9 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="boxStrokeColor">@color/caption</item>
         <item name="hintTextColor">@color/caption</item>
-
     </style>
 
-    <style name="login_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
+    <style name="faith_button" parent="Widget.MaterialComponents.Button.OutlinedButton.Icon">
         <item name="android:layout_width">300dp</item>
         <item name="android:layout_height">69dp</item>
         <item name="cornerRadius">40dp</item>
