--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -2,7 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
 
+        <variable
+            name="eventViewModel"
+            type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />
+    </data>
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -62,9 +67,9 @@
                 app:layout_constraintGuide_percent="0.03" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="611dp"
-                android:layout_height="412dp"
+                android:id="@+id/recyclerview_backpack"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:scrollbars="horizontal|vertical"
                 app:layout_constraintBottom_toTopOf="@+id/guide_items_horizontal_end"
                 app:layout_constraintEnd_toStartOf="@+id/guide_items_vertical_end"
