FAITH-195 : Het openschuiven van de emotievatar moet mooi gestyled worden

--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -30,18 +30,18 @@
             android:layout_height="0dp"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
+            android:contentDescription="@string/avatar_inkleuren"
             android:src="@drawable/avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.utils.widget.ImageFilterView
+        <ImageView
             android:id="@+id/tv_editdetail_slideToEmotionAvatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:background="@color/colorAccent"
-            app:srcCompat="@drawable/ic_baseline_chevron_left_24px"
-            app:altSrc="@drawable/ic_baseline_chevron_right_24px"
+            android:layout_width="40dp"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_arrow"
+            android:contentDescription="@string/slide"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -61,6 +61,7 @@
             android:layout_height="70dp"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
+            android:contentDescription="@string/editeer"
             android:elevation="2dp"
             android:onClick="@{() -> editdetailViewModel.onGoToEmotionAvatarButtonClicked()}"
             app:srcCompat="@drawable/ic_baseline_edit_24px"
