temp commit: only fix pause button while recording

--- a/app/src/main/res/drawable/button_audio_play.xml
+++ b/app/src/main/res/drawable/button_audio_play.xml
@@ -3,7 +3,7 @@
     android:height="51dp"
     android:viewportWidth="37"
     android:viewportHeight="51">
-  <path
-      android:pathData="M35.7128,23.0123L5.017,0.6403C2.9706,-0.9027 0,0.5117 0,3.0832L0,47.9559C0,50.4632 2.9706,51.8775 5.017,50.3989L35.7128,27.9625C37.4291,26.6767 37.4291,24.2338 35.7128,23.0123Z"
-      android:fillColor="#0000FF"/>
+    <path
+        android:fillColor="#95E8CD"
+        android:pathData="M35.7128,23.0123L5.017,0.6403C2.9706,-0.9027 0,0.5117 0,3.0832L0,47.9559C0,50.4632 2.9706,51.8775 5.017,50.3989L35.7128,27.9625C37.4291,26.6767 37.4291,24.2338 35.7128,23.0123Z" />
 </vector>
