--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -85,7 +85,8 @@
                     <ImageButton
                         android:id="@+id/btn_recordAudio_recorderStart"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="40dp"
                         android:background="@drawable/button_record_start"
                         android:contentDescription="@string/description_start_recording"
                         android:onClick="@{() -> audioDetailViewModel.onRecorderStartButtonClicked()}"
@@ -98,7 +99,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/audio_recording"
-                    android:layout_width="270dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:layout_margin="8dp"
@@ -123,13 +124,27 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="40dp"
                         android:background="@drawable/button_record_pause"
-                        android:contentDescription="@string/description_stop_recording"
+                        android:contentDescription="@string/description_recording_pause"
                         android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
-                        android:visibility="@{audioDetailViewModel.pauseSupported? View.VISIBLE : View.GONE}"
+                        android:visibility="@{audioDetailViewModel.pauseRecordingVisible ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/btn_recordAudio_recorderStop"
                         app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageButton
+                        android:id="@+id/btn_recordAudio_recorderRestartRecording"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="40dp"
+                        android:background="@drawable/button_record_start"
+                        android:contentDescription="@string/description_start_recording"
+                        android:onClick="@{() -> audioDetailViewModel.onRecorderPauseButtonClicked()}"
+                        android:visibility="@{audioDetailViewModel.restartRecordingVisible ? View.VISIBLE : View.GONE}"
+                        app:layout_constraintBottom_toBottomOf="@id/btn_recordAudio_recorderPause"
+                        app:layout_constraintEnd_toEndOf="@id/btn_recordAudio_recorderPause"
+                        app:layout_constraintStart_toStartOf="@id/btn_recordAudio_recorderPause"
+                        app:layout_constraintTop_toTopOf="@id/btn_recordAudio_recorderPause" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
