--- a/app/src/main/res/layout/popup_backpack_menu_add.xml
+++ b/app/src/main/res/layout/popup_backpack_menu_add.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/backpack_ic_bestand"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_menu_bestand" />
+
+    <ImageView
+        android:id="@+id/backpack_ic_foto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backpack_ic_bestand"
+        app:srcCompat="@drawable/ic_menu_icoon_foto" />
+
+    <ImageView
+        android:id="@+id/backpack_ic_tekenen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backpack_ic_foto"
+        app:srcCompat="@drawable/ic_tekenen" />
+
+    <ImageView
+        android:id="@+id/backpack_ic_schrijven"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backpack_ic_tekenen"
+        app:srcCompat="@drawable/ic_schrijven" />
+
+    <ImageView
+        android:id="@+id/backpack_ic_opnemen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backpack_ic_schrijven"
+        app:srcCompat="@drawable/ic_menu_icoon_audio" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
